@@ -332,8 +332,8 @@ name|Reader
 name|reader
 parameter_list|)
 block|{
-name|TokenStream
-name|result
+name|StandardTokenizer
+name|tokenStream
 init|=
 operator|new
 name|StandardTokenizer
@@ -343,14 +343,22 @@ argument_list|,
 name|replaceInvalidAcronym
 argument_list|)
 decl_stmt|;
+name|tokenStream
+operator|.
+name|setMaxTokenLength
+argument_list|(
+name|maxTokenLength
+argument_list|)
+expr_stmt|;
+name|TokenStream
 name|result
-operator|=
+init|=
 operator|new
 name|StandardFilter
 argument_list|(
-name|result
+name|tokenStream
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|result
 operator|=
 operator|new
@@ -388,6 +396,49 @@ DECL|field|filteredTokenStream
 name|TokenStream
 name|filteredTokenStream
 decl_stmt|;
+block|}
+comment|/** Default maximum allowed token length */
+DECL|field|DEFAULT_MAX_TOKEN_LENGTH
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MAX_TOKEN_LENGTH
+init|=
+literal|255
+decl_stmt|;
+DECL|field|maxTokenLength
+specifier|private
+name|int
+name|maxTokenLength
+init|=
+name|DEFAULT_MAX_TOKEN_LENGTH
+decl_stmt|;
+comment|/**    * Set maximum allowed token length.  If a token is seen    * that exceeds this length then it is discarded.  This    * setting only takes effect the next time tokenStream or    * reusableTokenStream is called.    */
+DECL|method|setMaxTokenLength
+specifier|public
+name|void
+name|setMaxTokenLength
+parameter_list|(
+name|int
+name|length
+parameter_list|)
+block|{
+name|maxTokenLength
+operator|=
+name|length
+expr_stmt|;
+block|}
+comment|/**    * @see #setMaxTokenLength    */
+DECL|method|getMaxTokenLength
+specifier|public
+name|int
+name|getMaxTokenLength
+parameter_list|()
+block|{
+return|return
+name|maxTokenLength
+return|;
 block|}
 DECL|method|reusableTokenStream
 specifier|public
@@ -491,6 +542,15 @@ name|reader
 argument_list|)
 expr_stmt|;
 block|}
+name|streams
+operator|.
+name|tokenStream
+operator|.
+name|setMaxTokenLength
+argument_list|(
+name|maxTokenLength
+argument_list|)
+expr_stmt|;
 name|streams
 operator|.
 name|tokenStream
