@@ -125,6 +125,46 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+name|input
+argument_list|,
+name|expectedImages
+argument_list|,
+name|expectedTypes
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|assertAnalyzesTo
+specifier|public
+name|void
+name|assertAnalyzesTo
+parameter_list|(
+name|Analyzer
+name|a
+parameter_list|,
+name|String
+name|input
+parameter_list|,
+name|String
+index|[]
+name|expectedImages
+parameter_list|,
+name|String
+index|[]
+name|expectedTypes
+parameter_list|,
+name|int
+index|[]
+name|expectedPosIncrs
+parameter_list|)
+throws|throws
+name|Exception
+block|{
 name|TokenStream
 name|ts
 init|=
@@ -205,6 +245,27 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|expectedPosIncrs
+operator|!=
+literal|null
+condition|)
+block|{
+name|assertEquals
+argument_list|(
+name|expectedPosIncrs
+index|[
+name|i
+index|]
+argument_list|,
+name|t
+operator|.
+name|getPositionIncrement
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|assertNull
 argument_list|(
@@ -218,6 +279,232 @@ name|ts
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testMaxTermLength
+specifier|public
+name|void
+name|testMaxTermLength
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|StandardAnalyzer
+name|sa
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|()
+decl_stmt|;
+name|sa
+operator|.
+name|setMaxTokenLength
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|sa
+argument_list|,
+literal|"ab cd toolong xy z"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"xy"
+block|,
+literal|"z"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMaxTermLength2
+specifier|public
+name|void
+name|testMaxTermLength2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|StandardAnalyzer
+name|sa
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|()
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|sa
+argument_list|,
+literal|"ab cd toolong xy z"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"toolong"
+block|,
+literal|"xy"
+block|,
+literal|"z"
+block|}
+argument_list|)
+expr_stmt|;
+name|sa
+operator|.
+name|setMaxTokenLength
+argument_list|(
+literal|5
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|sa
+argument_list|,
+literal|"ab cd toolong xy z"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"xy"
+block|,
+literal|"z"
+block|}
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|1
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMaxTermLength3
+specifier|public
+name|void
+name|testMaxTermLength3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|char
+index|[]
+name|chars
+init|=
+operator|new
+name|char
+index|[
+literal|255
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|255
+condition|;
+name|i
+operator|++
+control|)
+name|chars
+index|[
+name|i
+index|]
+operator|=
+literal|'a'
+expr_stmt|;
+name|String
+name|longTerm
+init|=
+operator|new
+name|String
+argument_list|(
+name|chars
+argument_list|,
+literal|0
+argument_list|,
+literal|255
+argument_list|)
+decl_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"ab cd "
+operator|+
+name|longTerm
+operator|+
+literal|" xy z"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+name|longTerm
+block|,
+literal|"xy"
+block|,
+literal|"z"
+block|}
+argument_list|)
+expr_stmt|;
+name|assertAnalyzesTo
+argument_list|(
+name|a
+argument_list|,
+literal|"ab cd "
+operator|+
+name|longTerm
+operator|+
+literal|"a xy z"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"ab"
+block|,
+literal|"cd"
+block|,
+literal|"xy"
+block|,
+literal|"z"
+block|}
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|testAlphanumeric
