@@ -3092,6 +3092,20 @@ name|TOKENIZED
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|StandardAnalyzer
+name|sa
+init|=
+operator|new
+name|StandardAnalyzer
+argument_list|()
+decl_stmt|;
+name|sa
+operator|.
+name|setMaxTokenLength
+argument_list|(
+literal|100000
+argument_list|)
+expr_stmt|;
 name|writer
 operator|=
 operator|new
@@ -3099,9 +3113,7 @@ name|IndexWriter
 argument_list|(
 name|dir
 argument_list|,
-operator|new
-name|StandardAnalyzer
-argument_list|()
+name|sa
 argument_list|)
 expr_stmt|;
 name|writer
